$Id: History,v 1.58 2002-07-12 09:30:18 dressel Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

July 12, 2002 M.Dressel 
- added comments to include/G4ParallelSamplerMessenger.hh
  and src/G4ParallelSamplerMessenger.cc

July 11, 2002 M.Dressel (internal-1-run-V04-01-01)
- add:
 include/G4MapPtkStandardCellScorer.hh 
 include/G4ParallelSamplerMessenger.hh  
 include/G4StandardCellScoreValues.hh
 include/G4StandardCellScorer.hh
 include/G4StandardScoreTable.hh
 include/G4StandardScorer.hh
 src/G4MapPtkStandardCellScorer.cc
 src/G4ParallelSamplerMessenger.cc
 src/G4StandardCellScorer.cc
 src/G4StandardScoreTable.cc
 src/G4StandardScoreTable.cc
 src/G4StandardScorer.cc
- the G4StandardScorer.cc needs the G4EventManager
  G4ParallelSamplerMessenger.hh needs G4StandardScorer.
  The other classes are needed in turn. 
- coworks with  internal-2-transport-V04-01-01 
                internal-2-geombias-V04-01-01

Jun 25, 2002 G.Cosmo (run-V04-00-04)
- Changed date to G4RunManager.cc for release 4.1.

May 29, 2002 H.Kurashige (run-V04-00-03)
- Add G4VModularPhysicsList.cc
- Use "virtual" inheritance for G4VVModularPhysicsList 

Apr 26, 2002 M.Asai (run-V04-00-02)