@@ -1,4 +1,4 @@
-$Id: History,v 1.58 2002-07-12 09:30:18 dressel Exp $
+$Id: History,v 1.59 2002-07-18 14:59:22 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+July 18, 2002 M.Dressel
+- change G4StandardScorerTable to the new G4IStore 
 
 July 12, 2002 M.Dressel 
 - added comments to include/G4ParallelSamplerMessenger.hh
